cmake_minimum_required(VERSION 2.8.3)
project(dota2cmd)
set(PROJECT_NAME dota2cmd)
include(CheckCXXCompilerFlag)
if(UNIX)
    CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
    CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
    if(COMPILER_SUPPORTS_CXX11)
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
    elseif(COMPILER_SUPPORTS_CXX0X)
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
    else()
        message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no
        C++11 support. Please use a different C++ compiler.")
    endif()
else()
    add_definitions(-DCURL_STATICLIB)
else()
endif()
if (WIN32)
    add_definitions(-D_WIN32_WINNT=0x0501)
endif(WIN32)

include_directories(include)
include_directories(include/jsoncpp)
add_subdirectory(include)
add_subdirectory(src)
add_subdirectory(tests)
enable_testing()
add_test(NAME UnitTests COMMAND testrunner)
