cmake_minimum_required(VERSION 3.1)
project(dota2cmd CXX)
set(PROJECT_NAME dota2cmd)
if(NOT UNIX)
    add_definitions(-DCURL_STATICLIB)
endif()
if (WIN32)
    add_definitions(-D_WIN32_WINNT=0x0501)
endif(WIN32)

include_directories(include)
include_directories(include/jsoncpp)
add_subdirectory(include)
add_subdirectory(src)
add_subdirectory(tests)
enable_testing()
add_test(NAME UnitTests COMMAND testrunner)
add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND} --output-on-failure DEPENDS testrunner)
